ui_tests/fn_calls_1.stderr
error: mismatched types: a:Foo[] b:Bar[]
   ┌─ main.box:8:17
   │  
 8 │   fn bar() -> Bar {
   │ ╭─────────────────^
 9 │ │     foo()
10 │ │ }
   │ ╰─^

