ui_tests/fn_calls_1.box
type Foo {}
type Bar {}

fn foo() -> Foo {
    new Foo {}
}

fn bar() -> Bar {
    foo()
}